--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 
     </header>
     <main>
-       
-        <script src="./app.js"></script>
+        <div class="omarClass">
+            <script src="./app.js"></script>
+        </div>
+    
     </main>
 
     <footer>
