--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
 
     </header>
     <main>
-        <div class="omarClass">
-            <script src="./app.js"></script>
+
+        <div>
+            <div id="1"></div>
+            <div id="2"></div>
+            <div id="3"></div>
+            <div id="4"></div>
+            <div id="5"></div>
+            <div id="6"></div>
+            <div id="7"></div>
         </div>
-    
+            <script src="./app.js"></script>
     </main>
 
     <footer>
