--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header">
             <div class="inner_header">
                 <div class="logo_">
-                    <h1>HR<span>Management</span></h1>
+                    <h1>HR<br>Management</h1>
                 </div>
                 <ul class="navigation">
                     <a href="./index.html"><li>Home</li></a>
@@ -34,13 +34,20 @@
     <main>
 
         <div>
-            <div id="1"></div>
-            <div id="2"></div>
-            <div id="3"></div>
-            <div id="4"></div>
-            <div id="5"></div>
-            <div id="6"></div>
-            <div id="7"></div>
+            <div class="divs" id="1"></div>
+            <div class="divs" id="2"></div>
+            <div class="divs" id="3"></div>
+            <div class="divs" id="4"></div>
+            <div class="divs" id="5"></div>
+            <div class="divs" id="6"></div>
+            <div class="divs" id="7"></div>
+            <!-- <span id="1"></span>
+            <span id="2"></span>
+            <span id="3"></span>
+            <span id="4"></span>
+            <span id="5"></span>
+            <span id="6"></span>
+            <span id="7"></span> -->
         </div>
             <script src="./app.js"></script>
     </main>
